# mcp10x

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml
.cursor/: mcp.example.json  mcp.json
.cursor/rules/: mcp10x.mdc
roles/: data_analyst.yaml  data_scientist.yaml  devops_sre.yaml  product_manager.yaml  qa_engineer.yaml  software_engineer.yaml  technical_writer.yaml  ux_designer.yaml
rules/: architecture.yaml  code_style.yaml  decisions.yaml
src/mcp10x/: __main__.py  config.py  confluence_tools.py  context_tools.py  decisions_tools.py  github_tools.py  gitlab_tools.py  jira_tools.py  prompts.py  resources.py  rules_tools.py  schemas.py  server.py
src/mcp10x/artifacts/: __init__.py  schemas.py  store.py  tools.py
src/mcp10x/roles/: __init__.py  bundled.py  prompts.py  registry.py  schemas.py  tools.py
src/mcp10x/workflows/: __init__.py  engine.py  templates.py  tools.py
